envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/users" }
                          route: { cluster: user_service }

                        - match: { prefix: "/orders" }
                          route: { cluster: orders_service }

                        - match: { prefix: "/admin" }
                          route: { cluster: admin_service }

                        # Swagger UI routes
                        - match: { prefix: "/login" }
                          route:
                            cluster: user_service
                          typed_per_filter_config:
                            envoy.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true

                        - match: { prefix: "/docs" }
                          route:
                            cluster: user_service
                            prefix_rewrite: "/docs"

                        - match: { prefix: "/orders/docs" }
                          route:
                            cluster: orders_service
                            prefix_rewrite: "/docs"

                        - match: { prefix: "/admin/docs" }
                          route:
                            cluster: admin_service
                            prefix_rewrite: "/docs"

                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      http_service:
                        server_uri:
                          uri: http://opa:8181
                          cluster: opa
                          timeout: 1s
                        authorization_request:
                          allowed_headers:
                            patterns:
                              - exact: authorization
                        path_prefix: "/v1/data/envoy/authz"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


  clusters:
    - name: user_service
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: user_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: user_service, port_value: 8002 }

    - name: orders_service
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: orders_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: orders_service, port_value: 8003 }

    - name: admin_service
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: admin_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: admin_service, port_value: 8004 }

    - name: opa
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: opa
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: opa, port_value: 8181 }
